// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`five 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      五个字标签
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      五个字标签
    </span>
  </div>,
]
`;

exports[`four 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      四字标签
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      四字标签
    </span>
  </div>,
]
`;

exports[`less than four 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      四以下
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      四以下
    </span>
  </div>,
]
`;

exports[`more than seven 1`] = `
Array [
  <div
    className="ic-tag ic-tag-wrapper ic-close-tag"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#FFA000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是大于七个字的可关闭标签
    </span>
    <mock-icon
      className="ic-tag-icon"
      onClick={[Function]}
      size={15}
      type="close_small"
    />
  </div>,
  <div
    className="ic-tag ic-tag-wrapper"
    onClose={[Function]}
    style={
      Object {
        "background": "RGB(255,160,0,0.08)",
        "color": "#ffa000",
      }
    }
  >
    <span
      className="ic-tag-inner"
    >
      我是大于七个字的关键词标签
    </span>
  </div>,
]
`;
